@@ -67,6 +67,7 @@ enum gtm_restart_reason
   RESTART_SERIAL_IRR,
   RESTART_NOT_READONLY,
   RESTART_CLOSED_NESTING,
+  RESTART_INIT_METHOD_GROUP,
   NUM_RESTARTS,
   NO_RESTART = NUM_RESTARTS
 };
